create function to handle user input

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>test</h1>
+
+
+    <div id="user-search-input-container">
+        <input type="text" id="user-input-field" placeholder="Enter in a city...">
+        <button type="submit" id="user-input-submit-btn">Search</button>
+    </div>
+
 </body>
 </html>
