update function to handle user search input

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,10 @@
 
 
     <div id="user-search-input-container">
-        <input type="text" id="user-input-field" placeholder="Enter in a city...">
-        <button type="submit" id="user-input-submit-btn">Search</button>
+        <form id="user-search-input-form">
+            <input type="text" id="user-input-field" placeholder="Enter in a city...">
+            <button type="submit" id="user-input-submit-btn">Search</button>
+        </form>
     </div>
 
 </body>
