--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,12 @@
 
     <div id="weather-display-container">
         <h2 id="city-name"></h2>
+        <h3 id="todays-date"></h3>
         <h3 id="current-temp"></h3>
+        <h3 id="feels-like"></h3>
         <h3 id="current-conditions"></h3>
+        <p id="weather-description"></p>
+        <img id="conditions-image">
         
         <div id="forecast-div-container"></div>
     </div>
