add loading animation

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
         </form>
     </div>
 
+    <div id="loading-div" style="display: none;">Loading...</div>
+
     <div id="weather-display-container">
         <h2 id="city-name"></h2>
         <h3 id="todays-date"></h3>
